; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/extr_foreach.c_test_odb_foreach__foreach.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/extr_foreach.c_test_odb_foreach__foreach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"testrepo.git\00", align 1
@_odb = common dso_local global i32 0, align 4
@foreach_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_odb_foreach__foreach() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = call i32 @cl_fixture(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %3 = call i32 @git_repository_open(i32* @_repo, i32 %2)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32, i32* @_repo, align 4
  %6 = call i32 @git_repository_odb(i32* @_odb, i32 %5)
  %7 = load i32, i32* @_odb, align 4
  %8 = load i32, i32* @foreach_cb, align 4
  %9 = call i32 @git_odb_foreach(i32 %7, i32 %8, i32* %1)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @cl_assert_equal_i(i32 1700, i32 %11)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_open(i32*, i32) #1

declare dso_local i32 @cl_fixture(i8*) #1

declare dso_local i32 @git_repository_odb(i32*, i32) #1

declare dso_local i32 @git_odb_foreach(i32, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
